assets/css/main.css
@font-face {
	font-family: minecraft_regular;
	src: url(../textures/font/regular.otf) format("opentype");
}

@font-face {
	font-family: minecraft_regular_italic;
	src: url(../textures/font/regular_italic.otf) format("opentype");
}

@font-face {
	font-family: minecraft_bold;
	src: url(../textures/font/bold.otf) format("opentype");
}

@font-face {
	font-family: minecraft_bold_italic;
	src: url(../textures/font/bold_italic.otf) format("opentype");
}

body {
	margin: 0;
	overflow: hidden;
	cursor: default;
	text-rendering: optimizeLegibility;
	font-family: minecraft_regular;
	font-size: 20px;
}

.scene {
	position: absolute;
	z-index: -1;
}

.layer {
	position: absolute;
	image-rendering: -moz-crisp-edges;
	image-rendering: -webkit-crisp-edges;
	image-rendering: pixelated;
	image-rendering: crisp-edges;
}

#container-layer, #menu-layer {
	background-color: rgba(0, 0, 0, .7);
	z-index: 1;
}

#debug-layer {
	background-color: #333;
}

.slots {
	position: absolute;
	z-index: 2;
}

.slot::before {
	content: "";
	width: 32px;
	height: 32px;
	margin: 2px;
	position: absolute;
}
.slot:hover::before {background-color: rgba(255, 255, 255, .5)}

.stack-count {
	color: #FFF;
	text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
}

